--- a/shop.html
+++ b/shop.html
@@ -51,6 +51,7 @@
           />
           <div>
             <img
+              class="img-right"
               src="./assets/img/h9-argilla-bright-hero-1000x1000.webp"
               alt=""
             />
