--- a/index.html
+++ b/index.html
@@ -24,7 +24,25 @@
       
       <!-- ! Side-Nav -->
 
-      <!-- ? Alternative mit img im HTMl -->
+
+      <!-- ? Kreise einfügen bei Side Nav - Variante mit before -->
+      <aside>
+        <a class="current" href="./index.html">About</a>
+        <div></div>
+
+        <a href="./lounger.html">Lounger</a>
+        <div></div>
+
+        <a href="./experience.html">Experience</a>
+        <div></div>
+
+        <a href="./inspiration.html">Inspiration</a>
+        <div></div>
+
+        <a href="./shop.html">Shop</a>
+      </aside>      
+      
+      <!-- ? Kreise einfügen bei Side Nav - Variante mit img im HTMl -->
       <!-- <aside>
         <a class="current-a" href="./index.html"> <img class="current-img" src="./assets/img/beidekreise.svg" alt=""> About</a>
         <div></div>
@@ -40,24 +58,6 @@
 
         <a href="./shop.html"><img src="./assets/img/kleinerkreis.svg" alt=""> Shop</a>
       </aside> -->
-
-
-      <!-- ? Alternative mit before -->
-      <aside>
-        <a class="current" href="./index.html">About</a>
-        <div></div>
-
-        <a href="./lounger.html">Lounger</a>
-        <div></div>
-
-        <a href="./experience.html">Experience</a>
-        <div></div>
-
-        <a href="./inspiration.html">Inspiration</a>
-        <div></div>
-
-        <a href="./shop.html">Shop</a>
-      </aside>
     </header>
 
     <main>
