--- a/experience.html
+++ b/experience.html
@@ -44,7 +44,7 @@
 
       <main>
         <section class="exp_lounger">
-          <img src="/assets/img/section-experience-1.jpg" alt="" />
+          <img src="/assets/img/section-experience.jpg" alt="Lautsprecher" />
           <div>
             <h1>Sounds Like Home</h1>
             <p>
