--- a/lounger.html
+++ b/lounger.html
@@ -45,7 +45,7 @@
       <main>
         <!-- ! Main-Bereich mit Bild links und Text rechts -->
         <section class="exp_lounger">
-          <img src="/assets/img/section-voyager.jpg" alt="Sessel" />
+          <img src="./assets/img/section-lounger.jpg" alt="Sessel" />
           <div>
             <h1>The Lounger</h1>
             <p>
